@@ -120,7 +120,10 @@ def generic_format_triggers(self, pkg, op_inst, format_op_inst, engine_inst):
         if not pkg_uses_default_preinst(pkg):
             t = triggers.preinst_contents_reset(format_op_inst)
             t.register(engine_inst)
-
+        # for ebuild format, always check the syms.
+        # this isn't perfect for binpkgs since if the binpkg is already
+        # screwed, the target is in place already
+        triggers.FixImageSymlinks(format_op_inst).register(engine_inst)
 
 def _generic_format_install_op(self, pkg, domain_settings, **kwds):
     return ebd.install_op(pkg, initial_env=domain_settings,
