@@ -5,6 +5,8 @@ See ChangeLog for full commit logs; this is summarized/major changes.
 
 pkgcore 0.2.8:
 
+* add a trigger to rewrite symlink targets if they point into ${D}
+
 * info trigger now ignores any file starting with '.'; no more complaints about
   .keep in info dirs.
 
